feat(setup): add cell to install package

--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "415baec7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas textblob nltk spacy\n",
+    "!python -m spacy download en_core_web_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "id": "279e42ba",
    "metadata": {},
