--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -2,10 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "415baec7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (2.3.3)\n",
+      "Requirement already satisfied: textblob in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (0.19.0)\n",
+      "Requirement already satisfied: nltk in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (3.9.2)\n",
+      "Requirement already satisfied: spacy in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (3.8.11)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pandas) (2.3.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: click in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from nltk) (8.3.1)\n",
+      "Requirement already satisfied: joblib in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from nltk) (1.5.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from nltk) (2025.11.3)\n",
+      "Requirement already satisfied: tqdm in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from nltk) (4.67.1)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (1.0.15)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (2.0.13)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (3.0.12)\n",
+      "Requirement already satisfied: thinc<8.4.0,>=8.3.4 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (8.3.10)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (1.1.3)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (2.5.2)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (2.0.10)\n",
+      "Requirement already satisfied: weasel<0.5.0,>=0.4.2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (0.4.3)\n",
+      "Requirement already satisfied: typer-slim<1.0.0,>=0.3.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (0.20.0)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (2.32.5)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (2.12.5)\n",
+      "Requirement already satisfied: jinja2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (3.1.6)\n",
+      "Requirement already satisfied: setuptools in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (80.9.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from spacy) (25.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.5 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (2.41.5)\n",
+      "Requirement already satisfied: typing-extensions>=4.14.1 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (4.15.0)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.4.2)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.11)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.6.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2025.11.12)\n",
+      "Requirement already satisfied: blis<1.4.0,>=1.3.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from thinc<8.4.0,>=8.3.4->spacy) (1.3.3)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from thinc<8.4.0,>=8.3.4->spacy) (0.1.5)\n",
+      "Requirement already satisfied: cloudpathlib<1.0.0,>=0.7.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from weasel<0.5.0,>=0.4.2->spacy) (0.23.0)\n",
+      "Requirement already satisfied: smart-open<8.0.0,>=5.2.1 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from weasel<0.5.0,>=0.4.2->spacy) (7.5.0)\n",
+      "Requirement already satisfied: wrapt in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.4.2->spacy) (2.0.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from jinja2->spacy) (3.0.3)\n",
+      "Collecting en-core-web-sm==3.8.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m52.5 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\u001b[31m56.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_sm')\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas textblob nltk spacy\n",
     "!python -m spacy download en_core_web_sm"
@@ -13,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "279e42ba",
    "metadata": {},
    "outputs": [
@@ -50,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "3d4c68a7",
    "metadata": {},
    "outputs": [],
@@ -127,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a5889c58",
    "metadata": {},
    "outputs": [],
@@ -175,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "f54408bf",
    "metadata": {},
    "outputs": [],
