fix(spacy): fix incorrect return value in process_spacy()

--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -55,7 +55,7 @@
       "Requirement already satisfied: MarkupSafe>=2.0 in /opt/homebrew/anaconda3/envs/NLP/lib/python3.13/site-packages (from jinja2->spacy) (3.0.3)\n",
       "Collecting en-core-web-sm==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m52.5 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\u001b[31m56.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m57.3 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0meta \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_sm')\n"
      ]
@@ -177,7 +177,7 @@
     "\n",
     "    top_words = Counter(filtered_words).most_common(10)\n",
     "\n",
-    "    return cleaned_text, sentences, filtered_words, top_words"
+    "    return cleaned_text, cleaned_sentences, filtered_words, top_words"
    ]
   },
   {
